<resources>
    <string name="app_name">Github User</string>
    <string name="no_user_found">No user found</string>
    <string name="image_view">Image View</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="image_detail_users">Image detail users</string>
    <string name="image_label_follower">Image label follower</string>
    <string name="image_label_following">Image label following</string>
    <string name="_0">0</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="tab_layout_descriptions">Tab layout descriptions</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_user_followed">No user followed</string>
    <string name="no_user_following">No user following</string>
    <string name="search">Search</string>
</resources>