<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.detail.DetailActivity">

    <ProgressBar
        android:id="@+id/progressbar_detail"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_image_detail"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/image_detail_users"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressbar_detail" />

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_image_detail" />

    <TextView
        android:id="@+id/tv_detail_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_name" />

    <ImageView
        android:id="@+id/iv_label_l"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/image_label_follower"
        android:src="@drawable/ic_people"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_followers"
        app:layout_constraintEnd_toStartOf="@+id/tv_detail_followers"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_followers" />

    <TextView
        android:id="@+id/tv_detail_followers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_username" />

    <TextView
        android:id="@+id/tv_l"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/followers"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_followers"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_followers"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_followers" />


    <ImageView
        android:id="@+id/iv_label_r"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:contentDescription="@string/image_label_following"
        android:src="@drawable/ic_people"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_following"
        app:layout_constraintEnd_toStartOf="@+id/tv_detail_following"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_following" />

    <TextView
        android:id="@+id/tv_detail_following"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_username" />

    <TextView
        android:id="@+id/tv_r"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/following"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_detail_following"
        app:layout_constraintStart_toEndOf="@+id/tv_detail_following"
        app:layout_constraintTop_toTopOf="@+id/tv_detail_following" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabLayout_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/tab_layout_descriptions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_detail_followers"
        app:tabMode="fixed" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewpager_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout_detail" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>